# clearedge

./: LICENSE  README.md  install_deps.py  pyproject.toml
clearedge/: bbox.py  chunk.py  metadata.py
clearedge/ocr_config/: config.yaml
clearedge/reader/: __init__.py  pdf.py  pdf_parser_jsonOutput.py
clearedge/utils/: hf_utils.py  pdf_utils.py  ultralytics_utils.py
notebooks/: quicktour.ipynb
