[tool.poetry]
name = "clearedge"
version = "0.1.3"
description = ""
authors = ["Clearedge"]
readme = "README.md"

[tool.poetry.scripts]
install-deps = "install_deps:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pymupdf = "^1.20.2"
tqdm = "^4.66.2"
requests = "^2.31.0"
tensorflow = "^2.16.1"
validators = "^0.22.0"
rapidocr-onnxruntime = "^1.3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
